observability/coroot/coroot.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coroot
spec:
  ingressClassName: nginx
  rules:
  - host: coroot.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coroot
            port:
              number: 8080
